reports/potential_flows.log
Traceback (most recent call last):
  File "c:\users\ella metcalfe\anaconda3\envs\py37\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "c:\users\ella metcalfe\anaconda3\envs\py37\lib\site-packages\nbclient\client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\ella metcalfe\anaconda3\envs\py37\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\ella metcalfe\anaconda3\envs\py37\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "c:\users\ella metcalfe\anaconda3\envs\py37\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "c:\users\ella metcalfe\anaconda3\envs\py37\lib\site-packages\nbclient\client.py", line 554, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "c:\users\ella metcalfe\anaconda3\envs\py37\lib\site-packages\nbclient\client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "c:\users\ella metcalfe\anaconda3\envs\py37\lib\site-packages\nbclient\client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import numpy as np
import matplotlib.pyplot as plt
x = np.linspace(-2, 2, 10)
y = np.linspace(-2, 2, 10)
X, Y = np.meshgrid(x, y)
U, V = Y**2, X**2
start=[[-1.5,-1.5],[-1,-1],[-0.5,-0.5],[0,0],[0.5,0.5],[1,1],[1.5,1.5]]

fig,ax=plt.subplots(figsize=(5,5))
ax.set_title('Field lines')
ax.axis([-2,2,-2,2])
ax.xaxis.set_ticks([])
ax.yaxis.set_ticks([])
#----------------------------------
start=[ #start points of selected field lines
    [-2,-2],[-2,-1.5],[-2,-1],[-2,0],[-2,0.5],[-2,1],[-2,1.5]
#----------------------------------

ax.streamplot(X,Y,U,V,start_points=start,density=10) # stream plot

plt.show()
------------------

[1;36m  File [1;32m"<ipython-input-1-2935ad674e41>"[1;36m, line [1;32m19[0m
[1;33m    ax.streamplot(X,Y,U,V,start_points=start,density=10) # stream plot[0m
[1;37m     ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-2935ad674e41>, line 19)

